# goals-rust

./: Cargo.toml  README.md  docker-compose.yml
src/: db.rs  main.rs
src/data_access/: goal_data_access.rs  mod.rs  user_data_access.rs  users.rs
src/entities/: goal.rs  mod.rs  user.rs
src/errors/: goal_errors.rs  mod.rs  user.rs  user_errors.rs
src/routes/: goal_routes.rs  goals.rs  mod.rs  user_routes.rs  users.rs
src/services/: auth_services.rs
src/use_cases/: mod.rs
src/use_cases/goals/: create_goal.rs  delete_goal.rs  get_all_goals.rs  mod.rs
src/use_cases/users/: mod.rs  sign_in.rs  sign_up.rs  verify_token.rs
src/utils/: mod.rs  routes_utils.rs
