[package]
name = "goals_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4" # Web framework
tokio-postgres = { version = "0.7.8", features = ["with-uuid-1"] } # Tokio Async/Await + Postgres Driver
tokio = { version = "1.28.1", features = ["full"] } # Async/Await
serde = { version = "1.0.163", features = ["derive"] } # JSON serialize/deserialize
regex = "1"
argon2 = "0.4.0" # Password hashing

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
